@@ -8,23 +8,22 @@
 
 package org.elasticsearch.action.search;
 
-import com.carrotsearch.hppc.IntArrayList;
-import com.carrotsearch.hppc.ObjectObjectHashMap;
-
 import org.apache.lucene.index.Term;
 import org.apache.lucene.search.CollectionStatistics;
 import org.apache.lucene.search.FieldDoc;
 import org.apache.lucene.search.ScoreDoc;
 import org.apache.lucene.search.Sort;
 import org.apache.lucene.search.SortField;
+import org.apache.lucene.search.SortedNumericSortField;
+import org.apache.lucene.search.SortedSetSortField;
 import org.apache.lucene.search.TermStatistics;
 import org.apache.lucene.search.TopDocs;
 import org.apache.lucene.search.TopFieldDocs;
 import org.apache.lucene.search.TotalHits;
 import org.apache.lucene.search.TotalHits.Relation;
 import org.elasticsearch.common.breaker.CircuitBreaker;
-import org.elasticsearch.common.collect.HppcMaps;
 import org.elasticsearch.common.lucene.search.TopDocsAndMaxScore;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.lucene.grouping.TopFieldGroups;
 import org.elasticsearch.search.DocValueFormat;
 import org.elasticsearch.search.SearchHit;
@@ -35,6 +34,7 @@ import org.elasticsearch.search.aggregations.AggregationReduceContext;
 import org.elasticsearch.search.aggregations.InternalAggregations;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.dfs.AggregatedDfs;
+import org.elasticsearch.search.dfs.DfsKnnResults;
 import org.elasticsearch.search.dfs.DfsSearchResult;
 import org.elasticsearch.search.fetch.FetchSearchResult;
 import org.elasticsearch.search.internal.InternalSearchResponse;
@@ -46,6 +46,7 @@ import org.elasticsearch.search.query.QuerySearchResult;
 import org.elasticsearch.search.suggest.Suggest;
 import org.elasticsearch.search.suggest.Suggest.Suggestion;
 import org.elasticsearch.search.suggest.completion.CompletionSuggestion;
+import org.elasticsearch.search.vectors.KnnSearchBuilder;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -58,7 +59,6 @@ import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.IntFunction;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 public final class SearchPhaseController {
     private static final ScoreDoc[] EMPTY_DOCS = new ScoreDoc[0];
@@ -71,9 +71,9 @@ public final class SearchPhaseController {
         this.requestToAggReduceContextBuilder = requestToAggReduceContextBuilder;
     }
 
-    public AggregatedDfs aggregateDfs(Collection<DfsSearchResult> results) {
-        ObjectObjectHashMap<Term, TermStatistics> termStatistics = HppcMaps.newNoNullKeysMap();
-        ObjectObjectHashMap<String, CollectionStatistics> fieldStatistics = HppcMaps.newNoNullKeysMap();
+    public static AggregatedDfs aggregateDfs(Collection<DfsSearchResult> results) {
+        Map<Term, TermStatistics> termStatistics = new HashMap<>();
+        Map<String, CollectionStatistics> fieldStatistics = new HashMap<>();
         long aggMaxDoc = 0;
         for (DfsSearchResult lEntry : results) {
             final Term[] terms = lEntry.terms();
@@ -102,34 +102,52 @@ public final class SearchPhaseController {
             }
 
             assert lEntry.fieldStatistics().containsKey(null) == false;
-            final Object[] keys = lEntry.fieldStatistics().keys;
-            final Object[] values = lEntry.fieldStatistics().values;
-            for (int i = 0; i < keys.length; i++) {
-                if (keys[i] != null) {
-                    String key = (String) keys[i];
-                    CollectionStatistics value = (CollectionStatistics) values[i];
-                    if (value == null) {
-                        continue;
-                    }
-                    assert key != null;
-                    CollectionStatistics existing = fieldStatistics.get(key);
-                    if (existing != null) {
-                        CollectionStatistics merged = new CollectionStatistics(
-                            key,
-                            existing.maxDoc() + value.maxDoc(),
-                            existing.docCount() + value.docCount(),
-                            existing.sumTotalTermFreq() + value.sumTotalTermFreq(),
-                            existing.sumDocFreq() + value.sumDocFreq()
-                        );
-                        fieldStatistics.put(key, merged);
-                    } else {
-                        fieldStatistics.put(key, value);
-                    }
+            for (var entry : lEntry.fieldStatistics().entrySet()) {
+                String key = entry.getKey();
+                CollectionStatistics value = entry.getValue();
+                if (value == null) {
+                    continue;
+                }
+                assert key != null;
+                CollectionStatistics existing = fieldStatistics.get(key);
+                if (existing != null) {
+                    CollectionStatistics merged = new CollectionStatistics(
+                        key,
+                        existing.maxDoc() + value.maxDoc(),
+                        existing.docCount() + value.docCount(),
+                        existing.sumTotalTermFreq() + value.sumTotalTermFreq(),
+                        existing.sumDocFreq() + value.sumDocFreq()
+                    );
+                    fieldStatistics.put(key, merged);
+                } else {
+                    fieldStatistics.put(key, value);
                 }
             }
             aggMaxDoc += lEntry.maxDoc();
         }
         return new AggregatedDfs(termStatistics, fieldStatistics, aggMaxDoc);
+    }
+
+    public static DfsKnnResults mergeKnnResults(SearchRequest request, List<DfsSearchResult> dfsSearchResults) {
+        if (request.hasKnnSearch() == false) {
+            return null;
+        }
+
+        List<TopDocs> topDocs = new ArrayList<>();
+        for (DfsSearchResult dfsSearchResult : dfsSearchResults) {
+            if (dfsSearchResult.knnResults() != null) {
+                ScoreDoc[] scoreDocs = dfsSearchResult.knnResults().scoreDocs();
+                TotalHits totalHits = new TotalHits(scoreDocs.length, Relation.EQUAL_TO);
+
+                TopDocs shardTopDocs = new TopDocs(totalHits, scoreDocs);
+                setShardIndex(shardTopDocs, dfsSearchResult.getShardIndex());
+                topDocs.add(shardTopDocs);
+            }
+        }
+
+        KnnSearchBuilder knnSearch = request.source().knnSearch();
+        TopDocs mergedTopDocs = TopDocs.merge(knnSearch.k(), topDocs.toArray(new TopDocs[0]));
+        return new DfsKnnResults(mergedTopDocs.scoreDocs);
     }
 
     /**
@@ -178,12 +196,10 @@ public final class SearchPhaseController {
         SortField[] sortFields = null;
         String groupField = null;
         Object[] groupValues = null;
-        if (mergedTopDocs instanceof TopFieldDocs) {
-            TopFieldDocs fieldDocs = (TopFieldDocs) mergedTopDocs;
+        if (mergedTopDocs instanceof TopFieldDocs fieldDocs) {
             sortFields = fieldDocs.fields;
-            if (fieldDocs instanceof TopFieldGroups) {
+            if (fieldDocs instanceof TopFieldGroups topFieldGroups) {
                 isSortedByField = (fieldDocs.fields.length == 1 && fieldDocs.fields[0].getType() == SortField.Type.SCORE) == false;
-                TopFieldGroups topFieldGroups = (TopFieldGroups) fieldDocs;
                 groupField = topFieldGroups.field;
                 groupValues = topFieldGroups.groupValues;
             } else {
@@ -202,13 +218,12 @@ public final class SearchPhaseController {
         final int numShards = results.size();
         if (numShards == 1 && from == 0) { // only one shard and no pagination we can just return the topDocs as we got them.
             return topDocs;
-        } else if (topDocs instanceof TopFieldGroups) {
-            TopFieldGroups firstTopDocs = (TopFieldGroups) topDocs;
+        } else if (topDocs instanceof TopFieldGroups firstTopDocs) {
             final Sort sort = new Sort(firstTopDocs.fields);
             final TopFieldGroups[] shardTopDocs = results.toArray(new TopFieldGroups[numShards]);
             mergedTopDocs = TopFieldGroups.merge(sort, from, topN, shardTopDocs, false);
-        } else if (topDocs instanceof TopFieldDocs) {
-            TopFieldDocs firstTopDocs = (TopFieldDocs) topDocs;
+        } else if (topDocs instanceof TopFieldDocs firstTopDocs) {
+            checkSameSortTypes(results, firstTopDocs.fields);
             final Sort sort = new Sort(firstTopDocs.fields);
             final TopFieldDocs[] shardTopDocs = results.toArray(new TopFieldDocs[numShards]);
             mergedTopDocs = TopDocs.merge(sort, from, topN, shardTopDocs);
@@ -219,6 +234,56 @@ public final class SearchPhaseController {
         return mergedTopDocs;
     }
 
+    private static void checkSameSortTypes(Collection<TopDocs> results, SortField[] firstSortFields) {
+        if (results.size() < 2) return;
+
+        SortField.Type[] firstTypes = new SortField.Type[firstSortFields.length];
+        boolean isFirstResult = true;
+        for (TopDocs topDocs : results) {
+            SortField[] curSortFields = ((TopFieldDocs) topDocs).fields;
+            if (isFirstResult) {
+                for (int i = 0; i < curSortFields.length; i++) {
+                    firstTypes[i] = getType(firstSortFields[i]);
+                    if (firstTypes[i] == SortField.Type.CUSTOM) {
+                        // for custom types that we can't resolve, we can't do the check
+                        return;
+                    }
+                }
+                isFirstResult = false;
+            } else {
+                for (int i = 0; i < curSortFields.length; i++) {
+                    SortField.Type curType = getType(curSortFields[i]);
+                    if (curType != firstTypes[i]) {
+                        if (curType == SortField.Type.CUSTOM) {
+                            // for custom types that we can't resolve, we can't do the check
+                            return;
+                        }
+                        throw new IllegalArgumentException(
+                            "Can't sort on field ["
+                                + curSortFields[i].getField()
+                                + "]; the field has incompatible sort types: ["
+                                + firstTypes[i]
+                                + "] and ["
+                                + curType
+                                + "] across shards!"
+                        );
+                    }
+                }
+            }
+        }
+    }
+
+    private static SortField.Type getType(SortField sortField) {
+        if (sortField instanceof SortedNumericSortField) {
+            return ((SortedNumericSortField) sortField).getNumericType();
+        }
+        if (sortField instanceof SortedSetSortField) {
+            return SortField.Type.STRING;
+        } else {
+            return sortField.getType();
+        }
+    }
+
     static void setShardIndex(TopDocs topDocs, int shardIndex) {
         assert topDocs.scoreDocs.length == 0 || topDocs.scoreDocs[0].shardIndex == -1 : "shardIndex is already set";
         for (ScoreDoc doc : topDocs.scoreDocs) {
@@ -226,7 +291,7 @@ public final class SearchPhaseController {
         }
     }
 
-    public ScoreDoc[] getLastEmittedDocPerShard(ReducedQueryPhase reducedQueryPhase, int numShards) {
+    public static ScoreDoc[] getLastEmittedDocPerShard(ReducedQueryPhase reducedQueryPhase, int numShards) {
         final ScoreDoc[] lastEmittedDocPerShard = new ScoreDoc[numShards];
         if (reducedQueryPhase.isEmptyResult == false) {
             final ScoreDoc[] sortedScoreDocs = reducedQueryPhase.sortedTopDocs.scoreDocs;
@@ -245,12 +310,13 @@ public final class SearchPhaseController {
     /**
      * Builds an array, with potential null elements, with docs to load.
      */
-    public IntArrayList[] fillDocIdsToLoad(int numShards, ScoreDoc[] shardDocs) {
-        IntArrayList[] docIdsToLoad = new IntArrayList[numShards];
+    public static List<Integer>[] fillDocIdsToLoad(int numShards, ScoreDoc[] shardDocs) {
+        @SuppressWarnings("unchecked")
+        List<Integer>[] docIdsToLoad = (List<Integer>[]) new ArrayList<?>[numShards];
         for (ScoreDoc shardDoc : shardDocs) {
-            IntArrayList shardDocIdsToLoad = docIdsToLoad[shardDoc.shardIndex];
+            List<Integer> shardDocIdsToLoad = docIdsToLoad[shardDoc.shardIndex];
             if (shardDocIdsToLoad == null) {
-                shardDocIdsToLoad = docIdsToLoad[shardDoc.shardIndex] = new IntArrayList();
+                shardDocIdsToLoad = docIdsToLoad[shardDoc.shardIndex] = new ArrayList<>();
             }
             shardDocIdsToLoad.add(shardDoc.doc);
         }
@@ -264,14 +330,14 @@ public final class SearchPhaseController {
      * Expects sortedDocs to have top search docs across all shards, optionally followed by top suggest docs for each named
      * completion suggestion ordered by suggestion name
      */
-    public InternalSearchResponse merge(
+    public static InternalSearchResponse merge(
         boolean ignoreFrom,
         ReducedQueryPhase reducedQueryPhase,
         Collection<? extends SearchPhaseResult> fetchResults,
         IntFunction<SearchPhaseResult> resultsLookup
     ) {
         if (reducedQueryPhase.isEmptyResult) {
-            return InternalSearchResponse.empty();
+            return InternalSearchResponse.EMPTY_WITH_TOTAL_HITS;
         }
         ScoreDoc[] sortedDocs = reducedQueryPhase.sortedTopDocs.scoreDocs;
         SearchHits hits = getHits(reducedQueryPhase, ignoreFrom, fetchResults, resultsLookup);
@@ -308,7 +374,7 @@ public final class SearchPhaseController {
         return reducedQueryPhase.buildResponse(hits, fetchResults);
     }
 
-    private SearchHits getHits(
+    private static SearchHits getHits(
         ReducedQueryPhase reducedQueryPhase,
         boolean ignoreFrom,
         Collection<? extends SearchPhaseResult> fetchResults,
@@ -378,7 +444,7 @@ public final class SearchPhaseController {
      * Reduces the given query results and consumes all aggregations and profile results.
      * @param queryResults a list of non-null query shard results
      */
-    ReducedQueryPhase reducedScrollQueryPhase(Collection<? extends SearchPhaseResult> queryResults) {
+    static ReducedQueryPhase reducedScrollQueryPhase(Collection<? extends SearchPhaseResult> queryResults) {
         AggregationReduceContext.Builder aggReduceContextBuilder = new AggregationReduceContext.Builder() {
             @Override
             public AggregationReduceContext forPartialReduction() {
@@ -415,7 +481,7 @@ public final class SearchPhaseController {
      * @see QuerySearchResult#consumeAggs()
      * @see QuerySearchResult#consumeProfileResult()
      */
-    ReducedQueryPhase reducedQueryPhase(
+    static ReducedQueryPhase reducedQueryPhase(
         Collection<? extends SearchPhaseResult> queryResults,
         List<InternalAggregations> bufferedAggs,
         List<TopDocs> bufferedTopDocs,
@@ -447,7 +513,7 @@ public final class SearchPhaseController {
             );
         }
         int total = queryResults.size();
-        queryResults = queryResults.stream().filter(res -> res.queryResult().isNull() == false).collect(Collectors.toList());
+        queryResults = queryResults.stream().filter(res -> res.queryResult().isNull() == false).toList();
         String errorMsg = "must have at least one non-empty search result, got 0 out of " + total;
         assert queryResults.isEmpty() == false : errorMsg;
         if (queryResults.isEmpty()) {
@@ -460,7 +526,7 @@ public final class SearchPhaseController {
         // count the total (we use the query result provider here, since we might not get any hits (we scrolled past them))
         final Map<String, List<Suggestion<?>>> groupedSuggestions = hasSuggest ? new HashMap<>() : Collections.emptyMap();
         final Map<String, SearchProfileQueryPhaseResult> profileShardResults = hasProfileResults
-            ? new HashMap<>(queryResults.size())
+            ? Maps.newMapWithExpectedSize(queryResults.size())
             : Collections.emptyMap();
         int from = 0;
         int size = 0;
@@ -479,8 +545,7 @@ public final class SearchPhaseController {
                 for (Suggestion<? extends Suggestion.Entry<? extends Suggestion.Entry.Option>> suggestion : result.suggest()) {
                     List<Suggestion<?>> suggestionList = groupedSuggestions.computeIfAbsent(suggestion.getName(), s -> new ArrayList<>());
                     suggestionList.add(suggestion);
-                    if (suggestion instanceof CompletionSuggestion) {
-                        CompletionSuggestion completionSuggestion = (CompletionSuggestion) suggestion;
+                    if (suggestion instanceof CompletionSuggestion completionSuggestion) {
                         completionSuggestion.setShardIndex(result.getShardIndex());
                     }
                 }
@@ -584,69 +649,41 @@ public final class SearchPhaseController {
             : source.from());
     }
 
-    public static final class ReducedQueryPhase {
+    public record ReducedQueryPhase(
         // the sum of all hits across all reduces shards
-        final TotalHits totalHits;
+        TotalHits totalHits,
         // the number of returned hits (doc IDs) across all reduces shards
-        final long fetchHits;
+        long fetchHits,
         // the max score across all reduces hits or {@link Float#NaN} if no hits returned
-        final float maxScore;
+        float maxScore,
         // <code>true</code> if at least one reduced result timed out
-        final boolean timedOut;
+        boolean timedOut,
         // non null and true if at least one reduced result was terminated early
-        final Boolean terminatedEarly;
+        Boolean terminatedEarly,
         // the reduced suggest results
-        final Suggest suggest;
+        Suggest suggest,
         // the reduced internal aggregations
-        final InternalAggregations aggregations;
+        InternalAggregations aggregations,
         // the reduced profile results
-        final SearchProfileResultsBuilder profileBuilder;
-        // the number of reduces phases
-        final int numReducePhases;
+        SearchProfileResultsBuilder profileBuilder,
         // encloses info about the merged top docs, the sort fields used to sort the score docs etc.
-        final SortedTopDocs sortedTopDocs;
-        // the size of the top hits to return
-        final int size;
-        // <code>true</code> iff the query phase had no results. Otherwise <code>false</code>
-        final boolean isEmptyResult;
-        // the offset into the merged top hits
-        final int from;
+        SortedTopDocs sortedTopDocs,
         // sort value formats used to sort / format the result
-        final DocValueFormat[] sortValueFormats;
+        DocValueFormat[] sortValueFormats,
+        // the number of reduces phases
+        int numReducePhases,
+        // the size of the top hits to return
+        int size,
+        // the offset into the merged top hits
+        int from,
+        // <code>true</code> iff the query phase had no results. Otherwise <code>false</code>
+        boolean isEmptyResult
+    ) {
 
-        ReducedQueryPhase(
-            TotalHits totalHits,
-            long fetchHits,
-            float maxScore,
-            boolean timedOut,
-            Boolean terminatedEarly,
-            Suggest suggest,
-            InternalAggregations aggregations,
-            SearchProfileResultsBuilder profileBuilder,
-            SortedTopDocs sortedTopDocs,
-            DocValueFormat[] sortValueFormats,
-            int numReducePhases,
-            int size,
-            int from,
-            boolean isEmptyResult
-        ) {
+        public ReducedQueryPhase {
             if (numReducePhases <= 0) {
                 throw new IllegalArgumentException("at least one reduce phase must have been applied but was: " + numReducePhases);
             }
-            this.totalHits = totalHits;
-            this.fetchHits = fetchHits;
-            this.maxScore = maxScore;
-            this.timedOut = timedOut;
-            this.terminatedEarly = terminatedEarly;
-            this.suggest = suggest;
-            this.aggregations = aggregations;
-            this.profileBuilder = profileBuilder;
-            this.numReducePhases = numReducePhases;
-            this.sortedTopDocs = sortedTopDocs;
-            this.size = size;
-            this.from = from;
-            this.isEmptyResult = isEmptyResult;
-            this.sortValueFormats = sortValueFormats;
         }
 
         /**
@@ -770,32 +807,17 @@ public final class SearchPhaseController {
         }
     }
 
-    static final class SortedTopDocs {
-        static final SortedTopDocs EMPTY = new SortedTopDocs(EMPTY_DOCS, false, null, null, null, 0);
+    record SortedTopDocs(
         // the searches merged top docs
-        final ScoreDoc[] scoreDocs;
+        ScoreDoc[] scoreDocs,
         // <code>true</code> iff the result score docs is sorted by a field (not score), this implies that <code>sortField</code> is set.
-        final boolean isSortedByField;
+        boolean isSortedByField,
         // the top docs sort fields used to sort the score docs, <code>null</code> if the results are not sorted
-        final SortField[] sortFields;
-        final String collapseField;
-        final Object[] collapseValues;
-        final int numberOfCompletionsSuggestions;
-
-        SortedTopDocs(
-            ScoreDoc[] scoreDocs,
-            boolean isSortedByField,
-            SortField[] sortFields,
-            String collapseField,
-            Object[] collapseValues,
-            int numberOfCompletionsSuggestions
-        ) {
-            this.scoreDocs = scoreDocs;
-            this.isSortedByField = isSortedByField;
-            this.sortFields = sortFields;
-            this.collapseField = collapseField;
-            this.collapseValues = collapseValues;
-            this.numberOfCompletionsSuggestions = numberOfCompletionsSuggestions;
-        }
+        SortField[] sortFields,
+        String collapseField,
+        Object[] collapseValues,
+        int numberOfCompletionsSuggestions
+    ) {
+        static final SortedTopDocs EMPTY = new SortedTopDocs(EMPTY_DOCS, false, null, null, null, 0);
     }
 }
