@@ -8,9 +8,6 @@
 
 package org.elasticsearch.index.seqno;
 
-import com.carrotsearch.hppc.ObjectLongHashMap;
-import com.carrotsearch.hppc.ObjectLongMap;
-
 import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.support.GroupedActionListener;
@@ -22,6 +19,7 @@ import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.io.stream.Writeable;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.core.SuppressForbidden;
 import org.elasticsearch.gateway.WriteStateException;
 import org.elasticsearch.index.IndexSettings;
@@ -53,7 +51,6 @@ import java.util.function.ToLongFunction;
 import java.util.stream.Collectors;
 import java.util.stream.LongStream;
 import java.util.stream.Stream;
-import java.util.stream.StreamSupport;
 
 /**
  * This class is responsible for tracking the replication group with its progress and safety markers (local and global checkpoints).
@@ -270,7 +267,7 @@ public class ReplicationTracker extends AbstractIndexShardComponent implements L
             logger.debug("no retention leases are expired from current retention leases [{}]", retentionLeases);
             return retentionLeases;
         }
-        final Collection<RetentionLease> nonExpiredLeases = partitionByExpiration.get(false) != null
+        final List<RetentionLease> nonExpiredLeases = partitionByExpiration.get(false) != null
             ? partitionByExpiration.get(false)
             : Collections.emptyList();
         logger.debug("expiring retention leases [{}] from current retention leases [{}]", expiredLeases, retentionLeases);
@@ -371,7 +368,7 @@ public class ReplicationTracker extends AbstractIndexShardComponent implements L
         retentionLeases = new RetentionLeases(
             operationPrimaryTerm,
             retentionLeases.version() + 1,
-            Stream.concat(retentionLeases.leases().stream(), Stream.of(retentionLease)).collect(Collectors.toList())
+            Stream.concat(retentionLeases.leases().stream(), Stream.of(retentionLease)).toList()
         );
         return retentionLease;
     }
@@ -413,7 +410,7 @@ public class ReplicationTracker extends AbstractIndexShardComponent implements L
             operationPrimaryTerm,
             retentionLeases.version() + 1,
             Stream.concat(retentionLeases.leases().stream().filter(lease -> lease.id().equals(id) == false), Stream.of(retentionLease))
-                .collect(Collectors.toList())
+                .toList()
         );
         return retentionLease;
     }
@@ -436,7 +433,7 @@ public class ReplicationTracker extends AbstractIndexShardComponent implements L
             retentionLeases = new RetentionLeases(
                 operationPrimaryTerm,
                 retentionLeases.version() + 1,
-                retentionLeases.leases().stream().filter(lease -> lease.id().equals(id) == false).collect(Collectors.toList())
+                retentionLeases.leases().stream().filter(lease -> lease.id().equals(id) == false).toList()
             );
             currentRetentionLeases = retentionLeases;
         }
@@ -561,10 +558,7 @@ public class ReplicationTracker extends AbstractIndexShardComponent implements L
      * Returns a list of peer recovery retention leases installed in this replication group
      */
     public List<RetentionLease> getPeerRecoveryRetentionLeases() {
-        return getRetentionLeases().leases()
-            .stream()
-            .filter(lease -> PEER_RECOVERY_RETENTION_LEASE_SOURCE.equals(lease.source()))
-            .collect(Collectors.toUnmodifiableList());
+        return getRetentionLeases().leases().stream().filter(lease -> PEER_RECOVERY_RETENTION_LEASE_SOURCE.equals(lease.source())).toList();
     }
 
     /**
@@ -586,25 +580,30 @@ public class ReplicationTracker extends AbstractIndexShardComponent implements L
         /*
          * If any of the peer-recovery retention leases need renewal, it's a good opportunity to renew them all.
          */
-        final boolean renewalNeeded = StreamSupport.stream(routingTable.spliterator(), false)
-            .filter(ShardRouting::assignedToNode)
-            .anyMatch(shardRouting -> {
-                final RetentionLease retentionLease = retentionLeases.get(getPeerRecoveryRetentionLeaseId(shardRouting));
-                if (retentionLease == null) {
-                    /*
-                     * If this shard copy is tracked then we got here here via a rolling upgrade from an older version that doesn't
-                     * create peer recovery retention leases for every shard copy.
-                     */
-                    assert checkpoints.get(shardRouting.allocationId().getId()).tracked == false
-                        || hasAllPeerRecoveryRetentionLeases == false;
-                    return false;
-                }
-                return retentionLease.timestamp() <= renewalTimeMillis
-                    || retentionLease.retainingSequenceNumber() <= checkpoints.get(shardRouting.allocationId().getId()).globalCheckpoint;
-            });
-
+        boolean renewalNeeded = false;
+        for (int copy = 0; copy < routingTable.size(); copy++) {
+            final ShardRouting shardRouting = routingTable.shard(copy);
+            if (shardRouting.assignedToNode() == false) {
+                continue;
+            }
+            final RetentionLease retentionLease = retentionLeases.get(getPeerRecoveryRetentionLeaseId(shardRouting));
+            if (retentionLease == null) {
+                /*
+                 * If this shard copy is tracked then we got here here via a rolling upgrade from an older version that doesn't
+                 * create peer recovery retention leases for every shard copy.
+                 */
+                assert checkpoints.get(shardRouting.allocationId().getId()).tracked == false || hasAllPeerRecoveryRetentionLeases == false;
+                continue;
+            }
+            if (retentionLease.timestamp() <= renewalTimeMillis
+                || retentionLease.retainingSequenceNumber() <= checkpoints.get(shardRouting.allocationId().getId()).globalCheckpoint) {
+                renewalNeeded = true;
+                break;
+            }
+        }
         if (renewalNeeded) {
-            for (ShardRouting shardRouting : routingTable) {
+            for (int copy = 0; copy < routingTable.size(); copy++) {
+                final ShardRouting shardRouting = routingTable.shard(copy);
                 if (shardRouting.assignedToNode()) {
                     final RetentionLease retentionLease = retentionLeases.get(getPeerRecoveryRetentionLeaseId(shardRouting));
                     if (retentionLease != null) {
@@ -732,15 +731,26 @@ public class ReplicationTracker extends AbstractIndexShardComponent implements L
      *
      * @return a map from allocation ID to the local knowledge of the persisted global checkpoint for that allocation ID
      */
-    public synchronized ObjectLongMap<String> getInSyncGlobalCheckpoints() {
+    public synchronized Map<String, Long> getInSyncGlobalCheckpoints() {
         assert primaryMode;
         assert handoffInProgress == false;
-        final ObjectLongMap<String> globalCheckpoints = new ObjectLongHashMap<>(checkpoints.size()); // upper bound on the size
-        checkpoints.entrySet()
+        // upper bound on the size
+        return checkpoints.entrySet()
             .stream()
             .filter(e -> e.getValue().inSync)
-            .forEach(e -> globalCheckpoints.put(e.getKey(), e.getValue().globalCheckpoint));
-        return globalCheckpoints;
+            .collect(Collectors.toMap(Map.Entry::getKey, e -> e.getValue().globalCheckpoint));
+    }
+
+    /**
+     * @return true iff any tracked global checkpoint for an in-sync copy lags behind our global checkpoint
+     */
+    public synchronized boolean trackedGlobalCheckpointsNeedSync() {
+        for (final var checkpointState : checkpoints.values()) {
+            if (checkpointState.inSync && checkpointState.globalCheckpoint < globalCheckpoint) {
+                return true;
+            }
+        }
+        return false;
     }
 
     /**
@@ -948,7 +958,7 @@ public class ReplicationTracker extends AbstractIndexShardComponent implements L
         this.handoffInProgress = false;
         this.appliedClusterStateVersion = -1L;
         this.globalCheckpoint = globalCheckpoint;
-        this.checkpoints = new HashMap<>(1 + indexSettings.getNumberOfReplicas());
+        this.checkpoints = Maps.newMapWithExpectedSize(1 + indexSettings.getNumberOfReplicas());
         this.onGlobalCheckpointUpdated = Objects.requireNonNull(onGlobalCheckpointUpdated);
         this.currentTimeMillisSupplier = Objects.requireNonNull(currentTimeMillisSupplier);
         this.onSyncRetentionLeases = Objects.requireNonNull(onSyncRetentionLeases);
@@ -1560,7 +1570,7 @@ public class ReplicationTracker extends AbstractIndexShardComponent implements L
         public PrimaryContext(StreamInput in) throws IOException {
             clusterStateVersion = in.readVLong();
             checkpoints = in.readMap(StreamInput::readString, CheckpointState::new);
-            routingTable = IndexShardRoutingTable.Builder.readFrom(in);
+            routingTable = IndexShardRoutingTable.Builder.readFrom(in).build();
         }
 
         public long clusterStateVersion() {
