@@ -15,6 +15,7 @@ import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.util.CollectionUtils;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.xcontent.XContentParserUtils;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.snapshots.SnapshotId;
@@ -338,7 +339,7 @@ public final class RepositoryData {
                 }
             }
             return false;
-        }).map(Map.Entry::getKey).collect(Collectors.toList());
+        }).map(Map.Entry::getKey).toList();
     }
 
     /**
@@ -589,7 +590,7 @@ public final class RepositoryData {
      * Resolve the given index names to index ids.
      */
     public Map<String, IndexId> resolveIndices(final List<String> indices) {
-        Map<String, IndexId> resolvedIndices = new HashMap<>(indices.size());
+        Map<String, IndexId> resolvedIndices = Maps.newMapWithExpectedSize(indices.size());
         for (final String indexName : indices) {
             final IndexId indexId = resolveIndexId(indexName);
             resolvedIndices.put(indexId.getName(), indexId);
@@ -612,7 +613,7 @@ public final class RepositoryData {
      * @param inFlightIds      name to index mapping for currently in-flight snapshots not yet in the repository data to fall back to
      */
     public Map<String, IndexId> resolveNewIndices(List<String> indicesToResolve, Map<String, IndexId> inFlightIds) {
-        Map<String, IndexId> snapshotIndices = new HashMap<>(indicesToResolve.size());
+        Map<String, IndexId> snapshotIndices = Maps.newMapWithExpectedSize(indicesToResolve.size());
         for (String index : indicesToResolve) {
             IndexId indexId = indices.get(index);
             if (indexId == null) {
@@ -681,18 +682,32 @@ public final class RepositoryData {
 
         if (shouldWriteUUIDS) {
             if (uuid.equals(MISSING_UUID)) {
-                assert permitMissingUuid : "missing uuid";
+                if (permitMissingUuid == false) {
+                    assert false : "missing uuid";
+                    throw new IllegalStateException("missing uuid");
+                }
             } else {
                 builder.field(UUID, uuid);
             }
             if (clusterUUID.equals(MISSING_UUID)) {
-                assert permitMissingUuid : "missing clusterUUID";
+                if (permitMissingUuid == false) {
+                    assert false : "missing clusterUUID";
+                    throw new IllegalStateException("missing clusterUUID");
+                }
             } else {
                 builder.field(CLUSTER_UUID, clusterUUID);
             }
         } else {
-            assert uuid.equals(MISSING_UUID) : "lost uuid " + uuid;
-            assert clusterUUID.equals(MISSING_UUID) : "lost clusterUUID " + clusterUUID;
+            if (uuid.equals(MISSING_UUID) == false) {
+                final IllegalStateException e = new IllegalStateException("lost uuid + [" + uuid + "]");
+                assert false : e;
+                throw e;
+            }
+            if (clusterUUID.equals(MISSING_UUID) == false) {
+                final IllegalStateException e = new IllegalStateException("lost clusterUUID + [" + uuid + "]");
+                assert false : e;
+                throw e;
+            }
         }
 
         // write the snapshots list
@@ -786,20 +801,16 @@ public final class RepositoryData {
         Map<String, String> indexMetaIdentifiers = null;
         String uuid = MISSING_UUID;
         String clusterUUID = MISSING_UUID;
-        while (parser.nextToken() == XContentParser.Token.FIELD_NAME) {
-            final String field = parser.currentName();
+        String field;
+        while ((field = parser.nextFieldName()) != null) {
             switch (field) {
-                case SNAPSHOTS:
-                    parseSnapshots(parser, snapshots, snapshotsDetails, indexMetaLookup);
-                    break;
-                case INDICES:
-                    parseIndices(parser, fixBrokenShardGens, snapshots, indexSnapshots, indexLookup, shardGenerations);
-                    break;
-                case INDEX_METADATA_IDENTIFIERS:
+                case SNAPSHOTS -> parseSnapshots(parser, snapshots, snapshotsDetails, indexMetaLookup);
+                case INDICES -> parseIndices(parser, fixBrokenShardGens, snapshots, indexSnapshots, indexLookup, shardGenerations);
+                case INDEX_METADATA_IDENTIFIERS -> {
                     XContentParserUtils.ensureExpectedToken(XContentParser.Token.START_OBJECT, parser.nextToken(), parser);
                     indexMetaIdentifiers = parser.mapStrings();
-                    break;
-                case MIN_VERSION:
+                }
+                case MIN_VERSION -> {
                     XContentParserUtils.ensureExpectedToken(XContentParser.Token.VALUE_STRING, parser.nextToken(), parser);
                     final Version version = Version.fromString(parser.text());
                     assert SnapshotsService.useShardGenerations(version);
@@ -808,19 +819,18 @@ public final class RepositoryData {
                             "this snapshot repository format requires Elasticsearch version [" + version + "] or later"
                         );
                     }
-                    break;
-                case UUID:
+                }
+                case UUID -> {
                     XContentParserUtils.ensureExpectedToken(XContentParser.Token.VALUE_STRING, parser.nextToken(), parser);
                     uuid = parser.text();
                     assert uuid.equals(MISSING_UUID) == false;
-                    break;
-                case CLUSTER_UUID:
+                }
+                case CLUSTER_UUID -> {
                     XContentParserUtils.ensureExpectedToken(XContentParser.Token.VALUE_STRING, parser.nextToken(), parser);
                     clusterUUID = parser.text();
                     assert clusterUUID.equals(MISSING_UUID) == false;
-                    break;
-                default:
-                    XContentParserUtils.throwUnknownField(field, parser.getTokenLocation());
+                }
+                default -> XContentParserUtils.throwUnknownField(field, parser);
             }
         }
 
@@ -858,10 +868,10 @@ public final class RepositoryData {
             return IndexMetaDataGenerations.EMPTY;
         }
         // Build a new map that instead of indexing the per-snapshot index generations by index id string, is indexed by IndexId
-        final Map<SnapshotId, Map<IndexId, String>> indexGenerations = new HashMap<>(indexMetaLookup.size());
+        final Map<SnapshotId, Map<IndexId, String>> indexGenerations = Maps.newMapWithExpectedSize(indexMetaLookup.size());
         for (Map.Entry<SnapshotId, Map<String, String>> snapshotIdMapEntry : indexMetaLookup.entrySet()) {
             final Map<String, String> val = snapshotIdMapEntry.getValue();
-            final Map<IndexId, String> forSnapshot = new HashMap<>(val.size());
+            final Map<IndexId, String> forSnapshot = Maps.newMapWithExpectedSize(val.size());
             for (Map.Entry<String, String> generationEntry : val.entrySet()) {
                 forSnapshot.put(indexLookup.get(generationEntry.getKey()), generationEntry.getValue());
             }
@@ -901,31 +911,23 @@ public final class RepositoryData {
                 String currentFieldName = parser.currentName();
                 parser.nextToken();
                 switch (currentFieldName) {
-                    case NAME:
-                        name = parser.text();
-                        break;
-                    case UUID:
-                        uuid = parser.text();
-                        break;
-                    case STATE:
-                        state = SnapshotState.fromValue((byte) parser.intValue());
-                        break;
-                    case INDEX_METADATA_LOOKUP:
-                        metaGenerations = parser.map(HashMap::new, p -> stringDeduplicator.computeIfAbsent(p.text(), Function.identity()));
-                        break;
-                    case VERSION:
-                        version = Version.fromString(parser.text());
-                        break;
-                    case START_TIME_MILLIS:
+                    case NAME -> name = parser.text();
+                    case UUID -> uuid = parser.text();
+                    case STATE -> state = SnapshotState.fromValue((byte) parser.intValue());
+                    case INDEX_METADATA_LOOKUP -> metaGenerations = parser.map(
+                        HashMap::new,
+                        p -> stringDeduplicator.computeIfAbsent(p.text(), Function.identity())
+                    );
+                    case VERSION -> version = Version.fromString(parser.text());
+                    case START_TIME_MILLIS -> {
                         assert startTimeMillis == -1;
                         startTimeMillis = parser.longValue();
-                        break;
-                    case END_TIME_MILLIS:
+                    }
+                    case END_TIME_MILLIS -> {
                         assert endTimeMillis == -1;
                         endTimeMillis = parser.longValue();
-                        break;
-                    case SLM_POLICY:
-                        slmPolicy = stringDeduplicator.computeIfAbsent(parser.text(), Function.identity());
+                    }
+                    case SLM_POLICY -> slmPolicy = stringDeduplicator.computeIfAbsent(parser.text(), Function.identity());
                 }
             }
             assert (startTimeMillis == -1) == (endTimeMillis == -1) : "unexpected: " + startTimeMillis + ", " + endTimeMillis + ", ";
@@ -971,10 +973,8 @@ public final class RepositoryData {
                 final String indexMetaFieldName = parser.currentName();
                 final XContentParser.Token currentToken = parser.nextToken();
                 switch (indexMetaFieldName) {
-                    case INDEX_ID:
-                        indexId = new IndexId(indexName, parser.text());
-                        break;
-                    case SNAPSHOTS:
+                    case INDEX_ID -> indexId = new IndexId(indexName, parser.text());
+                    case SNAPSHOTS -> {
                         XContentParserUtils.ensureExpectedToken(XContentParser.Token.START_ARRAY, currentToken, parser);
                         XContentParser.Token currToken;
                         while ((currToken = parser.nextToken()) != XContentParser.Token.END_ARRAY) {
@@ -1003,13 +1003,13 @@ public final class RepositoryData {
                             }
                             snapshotIds.add(snapshotId);
                         }
-                        break;
-                    case SHARD_GENERATIONS:
+                    }
+                    case SHARD_GENERATIONS -> {
                         XContentParserUtils.ensureExpectedToken(XContentParser.Token.START_ARRAY, currentToken, parser);
                         while (parser.nextToken() != XContentParser.Token.END_ARRAY) {
                             gens.add(ShardGeneration.fromXContent(parser));
                         }
-                        break;
+                    }
                 }
             }
             assert indexId != null;
