@@ -7,7 +7,6 @@
  */
 package org.elasticsearch.repositories.fs;
 
-import org.apache.lucene.analysis.MockAnalyzer;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
 import org.apache.lucene.document.SortedDocValuesField;
@@ -20,9 +19,10 @@ import org.apache.lucene.index.IndexWriter;
 import org.apache.lucene.index.NoMergePolicy;
 import org.apache.lucene.index.Term;
 import org.apache.lucene.store.Directory;
+import org.apache.lucene.tests.analysis.MockAnalyzer;
+import org.apache.lucene.tests.util.TestUtil;
 import org.apache.lucene.util.BytesRef;
 import org.apache.lucene.util.IOSupplier;
-import org.apache.lucene.util.TestUtil;
 import org.elasticsearch.Version;
 import org.elasticsearch.action.support.PlainActionFuture;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
@@ -55,8 +55,6 @@ import org.elasticsearch.snapshots.SnapshotId;
 import org.elasticsearch.test.DummyShardLock;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.IndexSettingsModule;
-import org.elasticsearch.threadpool.TestThreadPool;
-import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.xcontent.NamedXContentRegistry;
 
 import java.io.IOException;
@@ -65,16 +63,13 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.concurrent.CountDownLatch;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.emptySet;
 
 public class FsRepositoryTests extends ESTestCase {
 
-    public void testSnapshotAndRestore() throws IOException, InterruptedException {
-        ThreadPool threadPool = new TestThreadPool(getClass().getSimpleName());
+    public void testSnapshotAndRestore() throws IOException {
         try (Directory directory = newDirectory()) {
             Path repo = createTempDir();
             Settings settings = Settings.builder()
@@ -105,28 +100,25 @@ public class FsRepositoryTests extends ESTestCase {
             IndexId indexId = new IndexId(idxSettings.getIndex().getName(), idxSettings.getUUID());
 
             IndexCommit indexCommit = Lucene.getIndexCommit(Lucene.readSegmentInfos(store.directory()), store.directory());
-            final PlainActionFuture<ShardSnapshotResult> future1 = PlainActionFuture.newFuture();
-            runGeneric(threadPool, () -> {
-                IndexShardSnapshotStatus snapshotStatus = IndexShardSnapshotStatus.newInitializing(null);
-                repository.snapshotShard(
-                    new SnapshotShardContext(
-                        store,
-                        null,
-                        snapshotId,
-                        indexId,
-                        new Engine.IndexCommitRef(indexCommit, () -> {}),
-                        null,
-                        snapshotStatus,
-                        Version.CURRENT,
-                        Collections.emptyMap(),
-                        future1
-                    )
-                );
-                future1.actionGet();
-                IndexShardSnapshotStatus.Copy copy = snapshotStatus.asCopy();
-                assertEquals(copy.getTotalFileCount(), copy.getIncrementalFileCount());
-            });
-            final ShardGeneration shardGeneration = future1.actionGet().getGeneration();
+            final PlainActionFuture<ShardSnapshotResult> snapshot1Future = PlainActionFuture.newFuture();
+            IndexShardSnapshotStatus snapshotStatus = IndexShardSnapshotStatus.newInitializing(null);
+            repository.snapshotShard(
+                new SnapshotShardContext(
+                    store,
+                    null,
+                    snapshotId,
+                    indexId,
+                    new Engine.IndexCommitRef(indexCommit, () -> {}),
+                    null,
+                    snapshotStatus,
+                    Version.CURRENT,
+                    Collections.emptyMap(),
+                    snapshot1Future
+                )
+            );
+            final ShardGeneration shardGeneration = snapshot1Future.actionGet().getGeneration();
+            IndexShardSnapshotStatus.Copy snapshot1StatusCopy = snapshotStatus.asCopy();
+            assertEquals(snapshot1StatusCopy.getTotalFileCount(), snapshot1StatusCopy.getIncrementalFileCount());
             Lucene.cleanLuceneIndex(directory);
             expectThrows(org.apache.lucene.index.IndexNotFoundException.class, () -> Lucene.readSegmentInfos(directory));
             DiscoveryNode localNode = new DiscoveryNode("foo", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
@@ -138,9 +130,10 @@ public class FsRepositoryTests extends ESTestCase {
             );
             routing = ShardRoutingHelper.initialize(routing, localNode.getId(), 0);
             RecoveryState state = new RecoveryState(routing, localNode, null);
-            final PlainActionFuture<Void> futureA = PlainActionFuture.newFuture();
-            runGeneric(threadPool, () -> repository.restoreShard(store, snapshotId, indexId, shardId, state, futureA));
-            futureA.actionGet();
+            final PlainActionFuture<Void> restore1Future = PlainActionFuture.newFuture();
+            repository.restoreShard(store, snapshotId, indexId, shardId, state, restore1Future);
+            restore1Future.actionGet();
+
             assertTrue(state.getIndex().recoveredBytes() > 0);
             assertEquals(0, state.getIndex().reusedFileCount());
             assertEquals(indexCommit.getFileNames().size(), state.getIndex().recoveredFileCount());
@@ -149,34 +142,32 @@ public class FsRepositoryTests extends ESTestCase {
             SnapshotId incSnapshotId = new SnapshotId("test1", "test1");
             IndexCommit incIndexCommit = Lucene.getIndexCommit(Lucene.readSegmentInfos(store.directory()), store.directory());
             Collection<String> commitFileNames = incIndexCommit.getFileNames();
-            final PlainActionFuture<ShardSnapshotResult> future2 = PlainActionFuture.newFuture();
-            runGeneric(threadPool, () -> {
-                IndexShardSnapshotStatus snapshotStatus = IndexShardSnapshotStatus.newInitializing(shardGeneration);
-                repository.snapshotShard(
-                    new SnapshotShardContext(
-                        store,
-                        null,
-                        incSnapshotId,
-                        indexId,
-                        new Engine.IndexCommitRef(incIndexCommit, () -> {}),
-                        null,
-                        snapshotStatus,
-                        Version.CURRENT,
-                        Collections.emptyMap(),
-                        future2
-                    )
-                );
-                future2.actionGet();
-                IndexShardSnapshotStatus.Copy copy = snapshotStatus.asCopy();
-                assertEquals(2, copy.getIncrementalFileCount());
-                assertEquals(commitFileNames.size(), copy.getTotalFileCount());
-            });
+            final PlainActionFuture<ShardSnapshotResult> snapshot2future = PlainActionFuture.newFuture();
+            IndexShardSnapshotStatus snapshotStatus2 = IndexShardSnapshotStatus.newInitializing(shardGeneration);
+            repository.snapshotShard(
+                new SnapshotShardContext(
+                    store,
+                    null,
+                    incSnapshotId,
+                    indexId,
+                    new Engine.IndexCommitRef(incIndexCommit, () -> {}),
+                    null,
+                    snapshotStatus2,
+                    Version.CURRENT,
+                    Collections.emptyMap(),
+                    snapshot2future
+                )
+            );
+            snapshot2future.actionGet();
+            IndexShardSnapshotStatus.Copy snapshot2statusCopy = snapshotStatus2.asCopy();
+            assertEquals(2, snapshot2statusCopy.getIncrementalFileCount());
+            assertEquals(commitFileNames.size(), snapshot2statusCopy.getTotalFileCount());
 
             // roll back to the first snap and then incrementally restore
             RecoveryState firstState = new RecoveryState(routing, localNode, null);
-            final PlainActionFuture<Void> futureB = PlainActionFuture.newFuture();
-            runGeneric(threadPool, () -> repository.restoreShard(store, snapshotId, indexId, shardId, firstState, futureB));
-            futureB.actionGet();
+            final PlainActionFuture<Void> restore2Future = PlainActionFuture.newFuture();
+            repository.restoreShard(store, snapshotId, indexId, shardId, firstState, restore2Future);
+            restore2Future.actionGet();
             assertEquals(
                 "should reuse everything except of .liv and .si",
                 commitFileNames.size() - 2,
@@ -184,34 +175,20 @@ public class FsRepositoryTests extends ESTestCase {
             );
 
             RecoveryState secondState = new RecoveryState(routing, localNode, null);
-            final PlainActionFuture<Void> futureC = PlainActionFuture.newFuture();
-            runGeneric(threadPool, () -> repository.restoreShard(store, incSnapshotId, indexId, shardId, secondState, futureC));
-            futureC.actionGet();
+            final PlainActionFuture<Void> restore3Future = PlainActionFuture.newFuture();
+            repository.restoreShard(store, incSnapshotId, indexId, shardId, secondState, restore3Future);
+            restore3Future.actionGet();
             assertEquals(secondState.getIndex().reusedFileCount(), commitFileNames.size() - 2);
             assertEquals(secondState.getIndex().recoveredFileCount(), 2);
             List<RecoveryState.FileDetail> recoveredFiles = secondState.getIndex()
                 .fileDetails()
                 .stream()
                 .filter(f -> f.reused() == false)
-                .collect(Collectors.toList());
-            Collections.sort(recoveredFiles, Comparator.comparing(RecoveryState.FileDetail::name));
+                .sorted(Comparator.comparing(RecoveryState.FileDetail::name))
+                .toList();
             assertTrue(recoveredFiles.get(0).name(), recoveredFiles.get(0).name().endsWith(".liv"));
             assertTrue(recoveredFiles.get(1).name(), recoveredFiles.get(1).name().endsWith("segments_" + incIndexCommit.getGeneration()));
-        } finally {
-            terminate(threadPool);
         }
-    }
-
-    private void runGeneric(ThreadPool threadPool, Runnable runnable) throws InterruptedException {
-        CountDownLatch latch = new CountDownLatch(1);
-        threadPool.generic().submit(() -> {
-            try {
-                runnable.run();
-            } finally {
-                latch.countDown();
-            }
-        });
-        latch.await();
     }
 
     private void deleteRandomDoc(Directory directory) throws IOException {
