@@ -33,9 +33,8 @@ import java.util.stream.IntStream;
 
 import static org.elasticsearch.xpack.core.ml.inference.trainedmodel.InferenceConfig.DEFAULT_RESULTS_FIELD;
 
-public class ZeroShotClassificationProcessor implements NlpTask.Processor {
+public class ZeroShotClassificationProcessor extends NlpTask.Processor {
 
-    private final NlpTokenizer tokenizer;
     private final int entailmentPos;
     private final int contraPos;
     private final String[] labels;
@@ -44,11 +43,8 @@ public class ZeroShotClassificationProcessor implements NlpTask.Processor {
     private final String resultsField;
 
     ZeroShotClassificationProcessor(NlpTokenizer tokenizer, ZeroShotClassificationConfig config) {
-        this.tokenizer = tokenizer;
-        List<String> lowerCased = config.getClassificationLabels()
-            .stream()
-            .map(s -> s.toLowerCase(Locale.ROOT))
-            .collect(Collectors.toList());
+        super(tokenizer);
+        List<String> lowerCased = config.getClassificationLabels().stream().map(s -> s.toLowerCase(Locale.ROOT)).toList();
         this.entailmentPos = lowerCased.indexOf("entailment");
         this.contraPos = lowerCased.indexOf("contradiction");
         if (entailmentPos == -1 || contraPos == -1) {
@@ -56,7 +52,7 @@ public class ZeroShotClassificationProcessor implements NlpTask.Processor {
                 "zero_shot_classification requires [entailment] and [contradiction] in classification_labels"
             );
         }
-        this.labels = Optional.ofNullable(config.getLabels()).orElse(List.of()).toArray(String[]::new);
+        this.labels = config.getLabels().orElse(List.of()).toArray(String[]::new);
         this.hypothesisTemplate = config.getHypothesisTemplate();
         this.isMultiLabel = config.isMultiLabel();
         this.resultsField = config.getResultsField();
@@ -71,7 +67,7 @@ public class ZeroShotClassificationProcessor implements NlpTask.Processor {
     public NlpTask.RequestBuilder getRequestBuilder(NlpConfig nlpConfig) {
         final String[] labelsValue;
         if (nlpConfig instanceof ZeroShotClassificationConfig zeroShotConfig) {
-            labelsValue = zeroShotConfig.getLabels().toArray(new String[0]);
+            labelsValue = zeroShotConfig.getLabels().orElse(List.of()).toArray(new String[0]);
         } else {
             labelsValue = this.labels;
         }
@@ -87,7 +83,7 @@ public class ZeroShotClassificationProcessor implements NlpTask.Processor {
         final boolean isMultiLabelValue;
         final String resultsFieldValue;
         if (nlpConfig instanceof ZeroShotClassificationConfig zeroShotConfig) {
-            labelsValue = zeroShotConfig.getLabels().toArray(new String[0]);
+            labelsValue = zeroShotConfig.getLabels().orElse(List.of()).toArray(new String[0]);
             isMultiLabelValue = zeroShotConfig.isMultiLabel();
             resultsFieldValue = zeroShotConfig.getResultsField();
         } else {
@@ -98,51 +94,39 @@ public class ZeroShotClassificationProcessor implements NlpTask.Processor {
         return new ResultProcessor(entailmentPos, contraPos, labelsValue, isMultiLabelValue, resultsFieldValue);
     }
 
-    static class RequestBuilder implements NlpTask.RequestBuilder {
-
-        private final NlpTokenizer tokenizer;
-        private final String[] labels;
-        private final String hypothesisTemplate;
-
-        RequestBuilder(NlpTokenizer tokenizer, String[] labels, String hypothesisTemplate) {
-            this.tokenizer = tokenizer;
-            this.labels = labels;
-            this.hypothesisTemplate = hypothesisTemplate;
-        }
+    record RequestBuilder(NlpTokenizer tokenizer, String[] labels, String hypothesisTemplate) implements NlpTask.RequestBuilder {
 
         @Override
-        public NlpTask.Request buildRequest(List<String> inputs, String requestId, Tokenization.Truncate truncate) throws IOException {
+        public NlpTask.Request buildRequest(List<String> inputs, String requestId, Tokenization.Truncate truncate, int span)
+            throws IOException {
             if (inputs.size() > 1) {
                 throw ExceptionsHelper.badRequestException("Unable to do zero-shot classification on more than one text input at a time");
             }
-            List<TokenizationResult.Tokenization> tokenizations = new ArrayList<>(labels.length);
+            if (span > -1) {
+                throw ExceptionsHelper.badRequestException("Unable to span zero-shot classification on long text input");
+            }
+            List<TokenizationResult.Tokens> tokenizations = new ArrayList<>(labels.length);
+            int seqId = 0;
+            NlpTokenizer.InnerTokenization firstSequenceTokenization = tokenizer.innerTokenize(inputs.get(0));
             for (String label : labels) {
-                tokenizations.add(tokenizer.tokenize(inputs.get(0), LoggerMessageFormat.format(null, hypothesisTemplate, label), truncate));
+                tokenizations.add(
+                    tokenizer.tokenize(
+                        inputs.get(0),
+                        firstSequenceTokenization,
+                        LoggerMessageFormat.format(null, hypothesisTemplate, label),
+                        truncate,
+                        seqId++
+                    )
+                );
             }
             TokenizationResult result = tokenizer.buildTokenizationResult(tokenizations);
-            return buildRequest(result, requestId);
-        }
-
-        @Override
-        public NlpTask.Request buildRequest(TokenizationResult tokenizationResult, String requestId) throws IOException {
-            return tokenizer.requestBuilder().buildRequest(tokenizationResult, requestId);
+            return result.buildRequest(requestId, truncate);
         }
     }
 
-    static class ResultProcessor implements NlpTask.ResultProcessor {
-        private final int entailmentPos;
-        private final int contraPos;
-        private final String[] labels;
-        private final boolean isMultiLabel;
-        private final String resultsField;
-
-        ResultProcessor(int entailmentPos, int contraPos, String[] labels, boolean isMultiLabel, String resultsField) {
-            this.entailmentPos = entailmentPos;
-            this.contraPos = contraPos;
-            this.labels = labels;
-            this.isMultiLabel = isMultiLabel;
-            this.resultsField = resultsField;
-        }
+    record ResultProcessor(int entailmentPos, int contraPos, String[] labels, boolean isMultiLabel, String resultsField)
+        implements
+            NlpTask.ResultProcessor {
 
         @Override
         public InferenceResults processResult(TokenizationResult tokenization, PyTorchInferenceResult pyTorchResult) {
